@@ -1,113 +1,67 @@
 package org.sarge.textrpg.object;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import java.util.Collections;
+import java.util.Optional;
+import java.util.Set;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.sarge.textrpg.common.ActionException;
-import org.sarge.textrpg.common.ActionTest;
-import org.sarge.textrpg.common.Contents;
-import org.sarge.textrpg.common.Description;
-import org.sarge.textrpg.common.Openable;
-import org.sarge.textrpg.common.Openable.Operation;
-import org.sarge.textrpg.common.Parent;
-import org.sarge.textrpg.object.Container.Descriptor;
-import org.sarge.textrpg.object.ObjectDescriptor.Builder;
-import org.sarge.textrpg.object.TrackedContents.Limit;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.sarge.textrpg.contents.Contents;
+import org.sarge.textrpg.contents.LimitedContents.Limit;
+import org.sarge.textrpg.contents.LimitedContents.LimitsMap;
+import org.sarge.textrpg.util.TestHelper;
 
-public class ContainerTest extends ActionTest {
+public class ContainerTest {
 	private Container container;
 	private WorldObject obj;
 
-	@Before
-	public void before() throws ActionException {
-		final ObjectDescriptor desc = new Builder("container").weight(1).reset(42).build();
-		final Limit limit = Limit.number(1);
-		container = new Container(new Descriptor(new ContentsObjectDescriptor(desc, Collections.singletonMap(limit, "limit")), "in", Openable.UNLOCKABLE, null));
-		container.openableModel().get().apply(Operation.OPEN);
-		obj = new WorldObject(new Builder("object").weight(2).build());
+	@BeforeEach
+	public void before() {
+		container = new Container(new Container.Descriptor(ObjectDescriptor.of("container"), "in", LimitsMap.EMPTY));
+		obj = new ObjectDescriptor.Builder("object").category("cat").weight(42).slot(Slot.KEYRING).build().create();
 	}
 
 	@Test
 	public void constructor() {
+		assertEquals("container", container.name());
 		assertNotNull(container.descriptor());
-		assertEquals("container", container.descriptor().getDescriptionKey());
 		assertNotNull(container.contents());
-		assertEquals(0, container.contents().size());
-		assertTrue(container.openableModel().isPresent());
-		assertEquals(1, container.weight());
+		assertEquals(0, container.weight());
+		assertEquals(true, container.isOpen());
+		assertEquals(Contents.EnumerationPolicy.DEFAULT, container.contents().policy());
+		assertEquals("in", container.contents().placement());
 	}
 
 	@Test
-	public void describe() {
-		final Description desc = container.describe();
-		assertEquals("{container}", desc.get("name"));
-		assertEquals("{container.open}", desc.get("container.open"));
-	}
-
-	@Test
-	public void add() throws ActionException {
-		// Open container and add an object
-		obj.setParent(container);
-		assertEquals(1, container.contents().size());
-		assertEquals(obj, container.contents().stream().iterator().next());
-		assertEquals(1 + 2, container.weight());
-
-		// Move object elsewhere and check weight reduced
-		final Parent parent = mock(Parent.class);
-		when(parent.contents()).thenReturn(new Contents());
-		obj.setParent(parent);
-		assertEquals(1, container.weight());
-	}
-
-	@Test
-	public void addClosed() throws ActionException {
-		container.openableModel().get().apply(Operation.CLOSE);
-		expect("container.add.closed");
-		obj.setParent(container);
+	public void reason() {
+		obj.parent(TestHelper.parent());
+		assertEquals(Optional.empty(), container.contents().reason(obj));
 	}
 
 	@Test
 	public void categoryLimit() {
-		final Limit catLimit = Container.categoryLimit(Collections.singleton("ok"));
-		assertEquals(true, catLimit.exceeds(obj, container.contents()));
-		final WorldObject valid = new WorldObject(new Builder("object").category("ok").build());
-		assertEquals(false, catLimit.exceeds(valid, container.contents()));
-	}
-
-	private void createKeyringContainer() {
-        container = new Container(new Descriptor(new ContentsObjectDescriptor(new Builder("name").build(), Collections.emptyMap()), "in", null, DeploymentSlot.KEYRING));
+		final Limit limit = Container.categoryLimit(Set.of("cat"));
+		assertEquals(true, limit.accepts(null, obj));
+		assertEquals(false, limit.accepts(null, ObjectDescriptor.of("invalid").create()));
 	}
 
 	@Test
-	public void keyring() throws ActionException {
-	    createKeyringContainer();
-		obj = new WorldObject(new Builder("key").slot(DeploymentSlot.KEYRING).build());
-		obj.setParent(container);
-		assertEquals(1, container.contents().size());
-		assertEquals(obj, container.contents().stream().iterator().next());
+	public void slotLimit() {
+		final Limit limit = Container.slotLimit(Slot.KEYRING);
+		assertEquals(true, limit.accepts(null, obj));
+		assertEquals(false, limit.accepts(null, ObjectDescriptor.of("invalid").create()));
 	}
 
 	@Test
-	public void keyringInvalidObject() throws ActionException {
-        createKeyringContainer();
-		expect("container.add.keyring");
-		obj.setParent(container);
+	public void slotLimitNone() {
+		assertThrows(IllegalArgumentException.class, () -> Container.slotLimit(Slot.NONE));
 	}
 
 	@Test
-	public void empty() throws ActionException {
-		final Parent parent = super.createParent();
-		obj.setParent(container);
-		container.empty(parent);
-		assertEquals(0, container.contents().size());
-		assertEquals(1, parent.contents().size());
-		assertEquals(obj, parent.contents().stream().iterator().next());
+	public void slotLimitInvalidSlot() {
+		assertThrows(IllegalArgumentException.class, () -> Container.slotLimit(Slot.ARMS));
 	}
 }
